# arcane-worker

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sonar-project.properties
app/: config.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  chat.py  health.py
app/clients/: __init__.py  model_config_client.py  prompt_version_client.py
app/core/: broker_factory.py  cache.py  error_handling.py  google_response_utils.py  instructor_genai_async_patch.py  logging_config.py  message_utils.py  parameter_extractor.py  registry.py  security.py  singleton.py  topic_constants.py  validators.py
app/domain/: __init__.py
app/domain/evaluation/: __init__.py  processor.py
app/domain/experiment/: __init__.py  processor.py
app/models/: schemas.py
app/services/: template.py
app/services/evaluation/: embeddings_builder.py  llm_evaluation_processor.py
app/services/llm/: __init__.py  anthropic_service.py  azure_service.py  base.py  bedrock_service.py  clients.py  factory.py  google_ai_studio_service.py  google_vertex_ai_service.py  openai_service.py  service.py  service_registry.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py  test_dependencies.py
tests/unit/clients/: __init__.py  test_prompt_version_client.py
tests/unit/core/: __init__.py  test_error_handling.py  test_logging_config.py  test_message_utils.py  test_parameter_extractor.py  test_registry.py  test_security.py  test_singleton.py  test_validators.py
tests/unit/domain/: __init__.py  (+2 more)
(+79 files in other folders)
